--- a/_config.yml
+++ b/_config.yml
@@ -68,9 +68,9 @@ jupyterhub_interact_text: Interact             # The text that interact buttons 
 use_binder_button: true                 # If 'true', add a binder button for interactive links
 binderhub_url: https://mybinder.org                        # The URL for your BinderHub. If no URL, use ""
 binder_repo_base: https://github.com/                     # The site on which the textbook repository is hosted
-binder_repo_org: YOUR-ORG                     # The username or organization that owns this repository
-binder_repo_name: YOUR-REPO                        # The name of the repository on the web
-binder_repo_branch: gh-pages                   # The branch on which your textbook is hosted.
+binder_repo_org: primer-computational-mathematics           # The username or organization that owns this repository
+binder_repo_name: book                        # The name of the repository on the web
+binder_repo_branch: automatic                   # The branch on which your textbook is hosted.
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
 # Thebelab settings
