--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -4,7 +4,7 @@ name: deploy-book
 on:
   push:
     branches:
-    - automatic
+    - master
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
