--- a/_config.yml
+++ b/_config.yml
@@ -65,12 +65,12 @@ jupyterhub_url: ''                     # The URL for your JupyterHub. If no URL,
 jupyterhub_interact_text: Interact             # The text that interact buttons will contain.
 
 # Binder link settings
-use_binder_button: true                 # If 'true', add a binder button for interactive links
+use_binder_button: false                 # If 'true', add a binder button for interactive links
 binderhub_url: https://mybinder.org                        # The URL for your BinderHub. If no URL, use ""
 binder_repo_base: https://github.com/                     # The site on which the textbook repository is hosted
 binder_repo_org: primer-computational-mathematics           # The username or organization that owns this repository
 binder_repo_name: book                        # The name of the repository on the web
-binder_repo_branch: automatic                   # The branch on which your textbook is hosted.
+binder_repo_branch: master                   # The branch on which your textbook is hosted.
 binderhub_interact_text: Interact              # The text that interact buttons will contain.
 
 # Thebelab settings
