Add loacl build instructions to the README.

--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -34,7 +34,7 @@ jobs:
     # Build the book
     - name: Build the book
       run: |
-        python3 scripts/generate_toc.py
+        python3 scripts/generate_toc.py book https://primer-computational-mathematics.github.io/
         jupyter-book build .
         bundle exec jekyll build
         touch _site/.nojekyll
