--- a/_config.yml.in
+++ b/_config.yml.in
@@ -22,8 +22,8 @@ email: m.d.piggott@imperial.ac.uk
 description: >-
   A collection of Jupyter notebooks which can be useful as pre-sessional material
 
-baseurl: "/book"  # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
-url: https://primer-computational-mathematics.github.io                  # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "${baseurl}"  # the subpath of your site, e.g. /blog. If there is no subpath for your site, use an empty string ""
+url: "${url}"                  # the base hostname & protocol for your site, e.g. http://example.com
 
 
 #######################################################################################
