Updates to build with jupyter-book 0.7
Update the Pandas notebook as an example index entry.

Update the workflow and temporarily publish this branch when pushed.

Fixup titling.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# Requirements for the demo notebooks
-# Useful for MyBinder configuration
+# Requirements to build and run the books
 pandas
 numpy
 datascience
@@ -7,4 +6,4 @@ folium
 matplotlib
 nbinteract
 scipy
-jupyter-book==0.6.4
+jupyter-book==0.7.0
