--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -4,7 +4,8 @@ name: deploy-book
 on:
   push:
     branches:
-    - master
+#    - master
+    - new_jupyterbook
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
@@ -19,29 +20,21 @@ jobs:
       with:
         python-version: 3.7
 
-    - name: Set up Ruby 2.6
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.6
-
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
-        gem install bundler
-        bundle install
+
 
 
     # Build the book
     - name: Build the book
       run: |
-        python3 scripts/generate_toc.py book https://primer-computational-mathematics.github.io/
+        python3 scripts/generate_new_toc.py
         jupyter-book build .
-        bundle exec jekyll build
-        touch _site/.nojekyll
 
     # Push the book's HTML to github-pages
     - name: GitHub Pages action
       uses: peaceiris/actions-gh-pages@v3.5.9
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_site
+        publish_dir: ./_build/html
