--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -4,8 +4,7 @@ name: deploy-book
 on:
   push:
     branches:
-#    - master
-    - new_jupyterbook
+    - master
 
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
@@ -30,6 +29,8 @@ jobs:
     - name: Build the book
       run: |
         python3 scripts/generate_new_toc.py
+        cd _tmp
+        cat _toc.yml
         jupyter-book build .
 
     # Push the book's HTML to github-pages
@@ -37,4 +38,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3.5.9
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./_build/html
+        publish_dir: ./_tmp/_build/html
