--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -15,10 +15,10 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
-    - name: Set up Python 3.6
+    - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
-        python-version: 3.6
+        python-version: 3.7
 
     - name: Install dependencies
       run: |
@@ -30,6 +30,7 @@ jobs:
     - name: Build the book
       run: |
         python3 scripts/generate_new_toc.py
+        cat _toc.yml
         jupyter-book build .
 
     # Push the book's HTML to github-pages
