Fixup the windows build.

--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -31,6 +31,7 @@ jobs:
       run: |
         python3 scripts/generate_new_toc.py
         cd _tmp
+        cat _toc.yml
         jupyter-book build .
 
     # Push the book's HTML to github-pages
