Switch out thebe interface.

--- a/_newconfig.yml.in
+++ b/_newconfig.yml.in
@@ -38,7 +38,7 @@ launch_buttons:
   notebook_interface        : classic  # The interface interactive links will activate ["classic", "jupyterlab"]
   binderhub_url             : https://mybinder.org  # The URL of the BinderHub (e.g., https://mybinder.org)
   jupyterhub_url            : ""  # The URL of the JupyterHub (e.g., https://datahub.berkeley.edu)
-  thebelab                  : true  # Add a thebelab button to pages (requires the repository to run on Binder)
+  thebelab                  : false  # Add a thebelab button to pages (requires the repository to run on Binder)
 
 repository:
   url                       : https://github.com/primer-computational-mathematics/book  # The URL to your book's repository
@@ -49,4 +49,11 @@ repository:
 # Advanced and power-user settings
 sphinx:
   extra_extensions          :   # A list of extra extensions to load by Sphinx.
+  - sphinx_thebe
   config                    :   # key-value pairs to directly over-ride the Sphinx configuration
+    thebe_config:
+      "repository_url": "https://github.com/primer-computational-mathematics/book"
+      "repository_branch": "master"
+      "selector": ".cell"
+      "selector_input": ".cell_input div.highlight"
+    "selector_output": ".cell_input div.highlight"
