--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Build the book
       run: |
         python3 scripts/generate_new_toc.py
+        python3 scripts/add_modules.py
         cd _tmp
         cat _toc.yml
         jupyter-book build .
