Remove restrictions on sphinx-book-theme version

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ folium
 matplotlib
 nbinteract
 scipy
-sphinx-book-theme==0.0.30
+sphinx-book-theme  #==0.0.30
 sphinx==2.4.4
 sphinx-thebe
 jupyter-book==0.7.4
