Smallest change set to switch to up-to-date jupyter-book build.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Requirements to build and run the books
+jupyter-book==0.13.0
 pandas
 numpy
 datascience
@@ -6,8 +7,7 @@ folium
 matplotlib
 nbinteract
 scipy
-sphinx-book-theme  #==0.0.30
-sphinx==2.4.4
+sphinx-book-theme
+sphinx
 sphinx-thebe
-jupyter-book==0.7.4
 natsort
