--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -14,10 +14,10 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
-    - name: Set up Python 3.7
+    - name: Set up Python 3.9
       uses: actions/setup-python@v1
       with:
-        python-version: 3.7
+        python-version: 3.9
 
     - name: Install dependencies
       run: |
@@ -32,6 +32,7 @@ jobs:
         python3 scripts/add_modules.py
         cd _tmp
         cat _toc.yml
+        jupyter-book toc migrate _toc.yml -o _toc.yml
         jupyter-book build .
 
     # Push the book's HTML to github-pages
